tests/fifo/expects/pop_before_push_fail.interp.expect
error: The two expressions did not evaluate to the same value (in transaction `pop(3)`)
   ┌─ tests/fifo/fifo.prot:42:15
   │
42 │     assert_eq(DUT.data_o, output);
   │               ^^^^^^^^^^^^^^^^^^ LHS Value: 0, RHS Value: 3

Trace 0 execution failed.
---CODE---
101
